Post Pages and minor fixes
For posts, you can load the next/previous 5
For friends, you can load the next page, but haven't implemented next part yet

--- a/CreatePost.html
+++ b/CreatePost.html
@@ -4,7 +4,7 @@
 	<title>Our Universe</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/CreatePost.css">
-	<script src="js/start.js"></script>
+	<script type="text/javascript" src="js/default.js"></script>
 	<link rel="icon" type="image/x-icon" href="images/page_icon.png">
 	<html lang="en-US" dir="ltr">
 	<meta charset="utf-8">
