--- a/Account.html
+++ b/Account.html
@@ -9,7 +9,7 @@
 
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/Account.css">
-	<script src="js/start.js"></script>
+	<script src="js/default.js"></script>
 	<link rel="icon" type="image/x-icon" href="images/page_icon.png">
 	<html lang="en-US" dir="ltr">
 	<meta charset="utf-8">
