--- a/Account_Login.html
+++ b/Account_Login.html
@@ -4,6 +4,7 @@
 	<title>Our Universe</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/Account.css">
+	<script src="js/default.js"></script>
 	<link rel="icon" type="image/x-icon" href="images/page_icon.png">
 	<html lang="en-US" dir="ltr">
 	<meta charset="utf-8">
