--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/start.css">
 	<link rel="icon" type="image/x-icon" href="images/page_icon.png">
+	<script type="text/javascript" src="js/default.js"></script>
 	<script type ="module" src="js/start.js"></script>
 	<html lang="en-US" dir="ltr">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Login page for Our Universe">
 	<script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
+	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 </head>
 
 <header>
@@ -24,7 +25,6 @@
 <div id="loader">Loading...</div>
 	<div id="forms">
 	<h2>Welcome!</h2><br>
-	<!-- this is how we do a comment-->
 		<div id="login_box"> 
 			<p>Please log in below:</p>
 			<form action="home.html" method="get" id="login_form">
@@ -52,7 +52,7 @@
 				<label>Confirm Password<br>
 				<input type="password" name="password2" required><br>
 				</input>
-				<button type="submit">Log in</button>
+				<button type="submit">Register</button>
 			</form>
 		</div>
 	</div>
