--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
 			<li><a href="FriendsList.html"><img src="images/friends_icon.png" width=13% height=13%> Friends List</li></a>
 			<li><a href="Account.html"><img src="images/account_icon.png") width=13% height=13%> Account</li></a>
 			<li><button onclick="confirmation()"><img src="images/logout_icon.png") width=13% height=13%> Logout</li></a>
+			<!-- adding href to button always goes to index.html, while confirmation() only goes to index.html if the user confirms-->
 		</ul>
 	</aside>
 	<section id="posts_feed">
