--- a/Account.html
+++ b/Account.html
@@ -19,7 +19,7 @@
 <header> 
 	<h1>Account Settings</h1>
 </header>
-<body style="margin-left:8px;">
+<body style="margin-left:8px;" onload="spawnFriends();">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<aside id="side_menu"> 
 		<p>Menu</p>
@@ -27,7 +27,8 @@
 			<li><a href="home.html"><img src="images/home_icon.png" width=13% height=13%> Back Home</li></a>
 			<li><a href="FriendsList.html"><img src="images/friends_icon.png" width=13% height=13%> Friends List</li></a>
 			<li><a href="CreatePost.html"><img src="images/post_icon.png") width=13% height=13%> Create a Post</li></a>
-			<li><a href="index.html"><button onclick="confirmation()"><img src="images/logout_icon.png") width=13% height=13%> Logout</li></a>
+			<li><button onclick="confirmation()"><img src="images/logout_icon.png") width=13% height=13%> Logout</li>
+			<!-- adding href to button always goes to index.html, while confirmation() only goes to index.html if the user confirms-->
 		</ul>
 	</aside>
 	<form class="form" id="account_form">
@@ -83,23 +84,18 @@
 	</form>
 	
 	<aside id="friends_menu">
-		<ul id="friend_list_aside">
-		<li class="friend_list_item">
-		<div class="friend_m"> <!-- m is short for menu, but put just an m to not be confused with friends_menu-->
+		<ul class="friend_list_aside">
+		<li class="friend_list_item" hidden> <!-- hidden hides template-->
+ 		<div class="friend_m"> <!-- m is short for menu, but put just an m to not be confused with friends_menu-->
 			<p><img src="images/page_icon.png"  style="float:left;height: 2.3vh;"><nobr>
 			<span> Friend 1's Name  </span><nobr>
 			<button class="button_style1" type="button" name="visit">Visit</button></nobr>
 			</p>
 		</div>
-		</li><li class="friend_list_item">
-		<div class="friend_m">
-			<p><img src="images/friends_icon.png" style="float:left;height: 2.3vh;">
-			<span> Friend 2's Name  </span><nobr>
-			<button class="button_style1" type="button" name="visit">Visit</button></nobr>
-			</p>
-		</div>
 		</li>
 		</ul>
+		<button onclick="loadLessFriends();">Load Previous</button>
+		<button onclick="loadMoreFriends();">Load Next</button>
 	</aside>
 	
 	
