--- a/Account.html
+++ b/Account.html
@@ -20,7 +20,7 @@
 	<h1>Account Settings</h1>
 </header>
 <body style="margin-left:8px;" onload="spawnFriends();">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
 	<aside id="side_menu"> 
 		<p>Menu</p>
 		<ul id="menu_list">
@@ -60,7 +60,7 @@
 		<button class="form_submit" type="submit">Submit</button>
 	</form>
 
-	<form class="form" id= "funfacts_form" action="Account.html" method="get">
+	<form class="form" id= "funfacts_form">
 	<h3>Fun Facts</h3>
 		<label>Favorite Activities<br>
 			<textarea id="fav_activities"  name="fav_activities" placeholder="Running aroung, napping, etc." ></textarea><br>
@@ -68,16 +68,16 @@
 		<br>
 		<br>
 		<label>Social or Solitary?<br>
-			<input id="social" type="radio" name="social?">Social<br>
-			<input id="solitary" type="radio" name="social?">Solitary<br>
-			<input id="shy" type="radio" name="social?">Shy<br>
+			<input id="social" type="radio" name="social" value="Social">Social<br>
+			<input id="solitary" type="radio" name="social" value="Solitary">Solitary<br>
+			<input id="shy" type="radio" name="social" value="Shy">Shy<br>
 		</label>
 		<br>
 		<br>
 		<label>Looking for friends?<br>
-			<input id="friend_yes" type ="radio" name="friends?">Yes, I love meeting new people!<br>
-			<input id="friend_no" type ="radio" name="friends?">No, I'm not good with others.<br>
-			<input id="friend_notrn" type="radio" name="friends?">Not at the moment.<br>
+			<input id="friend_yes" type ="radio" name="friends" value="Friendly">Yes, I love meeting new people!<br>
+			<input id="friend_no" type ="radio" name="friends" value="Not so friendly">No, I'm not good with others.<br>
+			<input id="friend_notrn" type="radio" name="friends" value="Not interested at the moment">Not at the moment.<br>
 		</label>
 		<br>
 		<button class="form_submit" type="submit">Submit</button>
@@ -115,8 +115,8 @@
 			measurementId: "G-QKW60JL836"
 		};
 		
-		var app = firebase.initializeApp(firebaseConfig);
-		const db = firebase.firestore(app);
+		const app = firebase.initializeApp(firebaseConfig);
+		const db = firebase.firestore();
 		
 		
 		/*
@@ -132,30 +132,9 @@
 			}
 		});
 		*/
-		document.getElementById('account_form')
-			.addEventListener('submit', submitForm);
-		
-		function submitForm(e){
-			e.preventDefault;
-			
-			var infoData = {
-				localNickname: document.getElementById('name').value,
-			    localLocation: document.getElementById('location').value,
-			    localType: document.getElementById('type').value,
-			    localAge: document.getElementById('age').value
-			}
-			
-			db.collection("Users").doc("sejV3H0i3YQxwjL31GgqJhXFEOu2").set(infoData)
-			.then(() => {
-				console.log("Document successfully written!");
-			})
-			.catch((error) => {
-				console.error("Error writing document: ", error);
-			});
-			document.getElementById('account_form').reset();
-		}
 	
 	</script>
+	<script src="js/Account.js"></script>
 	<footer>
 		<a href="documents/legal.txt" target="_blank">Legal Information</a>
 	</footer>
