Change Elements for Posts/Friends
Was a quick test/demo of changing elements for posts/friends, so I know how to do that when the time comes

--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
 		<li class="friend_list_item" hidden> <!-- hidden hides template-->
  		<div class="friend_m"> <!-- m is short for menu, but put just an m to not be confused with friends_menu-->
 			<p><img src="images/page_icon.png"  style="float:left;height: 2.3vh;"><nobr>
-			<span> Friend 1's Name  </span><nobr>
+			<span class="friend-name"> Friend 1's Name  </span><nobr>
 			<button class="button_style1" type="button" name="visit">Visit</button></nobr>
 			</p>
 		</div>
