--- a/Account.html
+++ b/Account.html
@@ -7,6 +7,7 @@
 	
 	<title>Settings - Our Universe</title>
 
+	<!-- Necessary imports-->
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/Account.css">
 	<script type="text/javascript" src="js/default.js"></script>
@@ -21,6 +22,8 @@
 </header>
 <body style="margin-left:8px;" onload="spawnFriends();">
 	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+	
+	<!-- Side Menu-->
 	<aside id="side_menu"> 
 		<p>Menu</p>
 		<ul id="menu_list">
@@ -31,6 +34,7 @@
 			<!-- adding href to button always goes to index.html, while confirmation() only goes to index.html if the user confirms-->
 		</ul>
 	</aside>
+
 	<form class="form" id="account_form">
 	<h3>Account Information</h3>
 		<label>Nickname:<br>
@@ -67,6 +71,8 @@
 		</label> 
 		<br>
 		<br>
+		
+		<!-- Multiple Choice Answers-->
 		<label>Social or Solitary?<br>
 			<input id="social" type="radio" name="social" value="Social">Social<br>
 			<input id="solitary" type="radio" name="social" value="Solitary">Solitary<br>
@@ -74,6 +80,8 @@
 		</label>
 		<br>
 		<br>
+		
+		<!-- Multiple Choice Answers-->
 		<label>Looking for friends?<br>
 			<input id="friend_yes" type ="radio" name="friends" value="Friendly">Yes, I love meeting new people!<br>
 			<input id="friend_no" type ="radio" name="friends" value="Not so friendly">No, I'm not good with others.<br>
@@ -83,6 +91,7 @@
 		<button class="form_submit" type="submit">Submit</button>
 	</form>
 	
+	<!-- Friend List-->
 	<aside id="friends_menu">
 		<ul class="friend_list_aside">
 		<li class="friend_list_item" hidden> <!-- hidden hides template-->
@@ -98,11 +107,12 @@
 		<button onclick="loadMoreFriends();">Load Next</button>
 	</aside>
 	
-	
+	<!-- Importing Firebase-->
 	<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 	
+	<!-- Sample code from Firebase config-->
 	<script>
 		const firebaseConfig = {
 			apiKey: "AIzaSyCfTkra5djZesE-OTSqIzB6lgx3X09oZZg",
