--- a/CreatePost.html
+++ b/CreatePost.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Imports and formatting-->
 	<title>Our Universe</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/CreatePost.css">
