--- a/FriendsList.html
+++ b/FriendsList.html
@@ -53,6 +53,7 @@
 		</div>
 		</li>
 		</ul>
+		<!--functions from js file-->
 		<button onclick="loadLessFriends();">Load Previous</button>
 		<button onclick="loadMoreFriends();">Load Next</button>
 	</aside>
