--- a/FriendsList.html
+++ b/FriendsList.html
@@ -45,6 +45,8 @@
 	<aside id="friends_menu">
 		<ul class="friend_list_aside">
 		<li class="friend_list_item" hidden> <!-- hidden hides template-->
+			
+		<!-- describes a friend template -->
  		<div class="friend_m"> <!-- m is short for menu, but put just an m to not be confused with friends_menu-->
 			<p><img src="images/page_icon.png"  style="float:left;height: 2.3vh;"><nobr>
 			<span> Friend 1's Name  </span><nobr>
