--- a/FriendsList.html
+++ b/FriendsList.html
@@ -17,6 +17,7 @@
 		<h1>Friends List</h1>
 </header>
 
+<!-- from js files-->
 <body onload="spawnFriends();spawnMainFriends();">
 <div id="wrapper">
 	<section id="friends_list">
