--- a/home.html
+++ b/home.html
@@ -16,6 +16,8 @@
 <header> 
 	<h1>Hello!</h1>
 </header>
+	
+<!-- functions from js file-->
 <body onload="spawnPosts();spawnFriends();">
 	<aside id="side_menu"> 
 		<p>Menu</p>
@@ -38,6 +40,7 @@
 			</p>
 		</div>
 	</div>
+	<!-- Navigation through posts, 5 at a time-->						    
 	<button onclick="loadLessPosts();">Load Previous</button>
 	<button onclick="loadMorePosts();">Load more</button>
 	</section>
